# fooyin_tagger

./: .gitignore  CMakeLists.testapp.txt  CMakeLists.txt  CMakeLists.txt.test  Plan_Tagger.md  README.md  annakili.html  debug_parser.py  metadata.json  quick_test.cpp  quick_test.sh  simple_test.cpp  test_actual_parser.cpp  test_app.cpp  test_section_extraction.cpp  test_wiki_parser.cpp  test_wikipedia.py  test_wikipedia2.py  test_wikipedia3.py
include/tagger/: tagger_common.h
section_test_build/: Makefile
section_test_build/fooyin-tagger_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
section_test_build/fooyin-tagger_autogen/ICMTUFM33F/: moc_taggersettings.cpp.d  moc_taggersettingspage.cpp.d
section_test_build/fooyin-tagger_autogen/OHLJLCNNGY/: moc_metadatasource.cpp.d  moc_musicbrainzsource.cpp.d  moc_wikipediasource.cpp.d
section_test_build/fooyin-tagger_autogen/PRMOGMWJPH/: moc_httpclient.cpp.d  moc_matchingengine.cpp.d  moc_taggingmanager.cpp.d
section_test_build/fooyin-tagger_autogen/UVLADIE3JM/: moc_taggerplugin.cpp.d
section_test_build/fooyin-tagger_autogen/YPKJ5OE7LN/: moc_taggerwidget.cpp.d
src/: taggerplugin.cpp  taggerplugin.h
src/models/: albummetadata.cpp  albummetadata.h  matchresult.cpp  matchresult.h
src/settings/: taggersettings.h  taggersettingspage.cpp  taggersettingspage.h
src/sources/: metadatasource.cpp  metadatasource.h  musicbrainzsource.cpp  musicbrainzsource.h  wikipediasource.cpp  wikipediasource.h
src/ui/: taggerwidget.cpp  taggerwidget.h  trackmatchdialog.cpp  trackmatchdialog.h
test/: CMakeLists.txt
test_app_build/: Makefile  compile_commands.json
test_app_build/fooyin-tagger_autogen/: deps
test_app_build/fooyin-tagger_autogen/ICMTUFM33F/: moc_taggersettings.cpp.d  moc_taggersettingspage.cpp.d
test_app_build/fooyin-tagger_autogen/OHLJLCNNGY/: moc_metadatasource.cpp.d  moc_musicbrainzsource.cpp.d  moc_wikipediasource.cpp.d
test_app_build/fooyin-tagger_autogen/PRMOGMWJPH/: moc_httpclient.cpp.d  moc_matchingengine.cpp.d  moc_taggingmanager.cpp.d
test_app_build/fooyin-tagger_autogen/UVLADIE3JM/: moc_taggerplugin.cpp.d
test_app_build/fooyin-tagger_autogen/YPKJ5OE7LN/: moc_taggerwidget.cpp.d
test_build/: Makefile
test_build/fooyin-tagger_autogen/: deps
test_build/fooyin-tagger_autogen/ICMTUFM33F/: moc_taggersettings.cpp.d  (+1 more)
(+8 files in other folders)
